overflow issue

--- a/blocks/columns-container/columns-container.css
+++ b/blocks/columns-container/columns-container.css
@@ -7,12 +7,13 @@
   background-color: #c1bfff !important; 
   
   /* Breakout technique to stretch full width */
-  width: 100vw !important;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw !important;
-  margin-right: -50vw !important;
+  max-width: 100% !important;
+  width: 100% !important;
+  /* position: relative; */
+  /* left: 50%;
+  right: 50%; */
+  /* margin-left: -50vw !important; */
+  /* margin-right: -50vw !important; */
   
   /* Remove external white space */
   margin-top: 0 !important;
@@ -28,15 +29,14 @@
    ========================================= */
 .columns-container {
   display: grid;
-  
   /* Columns: Gutter | Left Content | Right Content | Gutter */
   grid-template-columns: 1fr minmax(100px, 1000px) minmax(100px, 1000px) 1fr;
   
   /* Rows: Header, Desc, Title, Text, Link */
   grid-template-rows: auto auto auto auto auto;
-  
   column-gap: 60px;
   row-gap: 0;
+  overflow-x: hidden;
 }
 
 /* =========================================
